2006-09-29  Daiki Ueno  <ueno@unixuser.org>

	* mime-pgp.el: Removed obsolete references.
	(mime-view-application/pgp): Merged into
	mime-decrypt-application/pgp-encrypted.

2006-07-04  Daiki Ueno  <ueno@unixuser.org>

	* mime-edit.el (mime-edit-sign-smime): Use
	epg-new-signature-digest-algorithm.

2006-05-28  Daiki Ueno  <ueno@unixuser.org>

	* mime-pgp.el (mime-add-application/pgp-keys): Don't use a temp buffer.

2006-05-26  Daiki Ueno  <ueno@unixuser.org>

	* mime-pgp.el (mime-view-application/pgp): Use
	epa-display-verify-result.
	(mime-verify-application/*-signature): Ditto.

2006-05-12  Daiki Ueno  <ueno@unixuser.org>

	* mime-edit.el (mime-edit-sign-pgp-mime): Extract micalg from the
	epg-new-signature object.

2006-05-04  Daiki Ueno  <ueno@unixuser.org>

	* mime-pgp.el (mime-view-application/pgp): Allow to verify
	signed-and-encrypted messages.

2006-04-30  Daiki Ueno  <ueno@unixuser.org>

	* mime-pgp.el: Require 'epa.
	(mime-verify-application/*-signature): Supply required arguments
	to buffer-substring.
	(mime-view-application/pgp): Convert line endings of the decrypted
	text.
	Thanks to Hiroya Murata <lapis-lazuli@pop06.odn.ne.jp>.
	[cf. <emacs-mime-ja:02027>]

2006-04-23  Daiki Ueno  <ueno@unixuser.org>

	* mime-pgp.el (mime-verify-application/*-signature): New function.
	(mime-verify-application/pgp-signature): Abolished.
	(mime-verify-application/pkcs7-signature): Abolished.

2006-04-23  Daiki Ueno  <ueno@unixuser.org>

	* mime-pgp.el (mime-verify-application/pkcs7-signature): Use EasyPG.
	(mime-view-application/pkcs7-mime): Ditto.

	* mime-edit.el (mime-edit-sign-smime): Use EasyPG.
	(mime-edit-encrypt-smime): Ditto.

	* SEMI-ELS (semi-modules-to-compile): Don't install PGG.

2006-04-20  Daiki Ueno  <ueno@unixuser.org>

	* mime-pgp.el (mime-view-application/pgp): Use epg-signature-to-string.
	(mime-verify-application/pgp-signature): Ditto.

2006-04-20  Daiki Ueno  <ueno@unixuser.org>

	* mime-pgp.el: Require 'epg.